# stock-trading-platform

./: .gitignore  README.md
client/: CMakeLists.txt
client/include/: utils.h
client/src/: main.cpp
server/: CMakeLists.txt
server/include/: market.h  order.h  orderbook.h  stock.h  trader.h  utils.h
server/src/: main.cpp  market.cpp  order.cpp  orderbook.cpp  stock.cpp  trader.cpp
server/tests/: test_market.cpp  test_order.cpp  test_orderbook.cpp  test_stock.cpp  test_trader.cpp
